Style: changed the layout of the WebContent/addFilmForm.html

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -56,8 +56,16 @@ input:focus, textarea:focus {
 	background-color:white;
 }
 
+body > div > div > h3 {
+	font-family: cursive;
+	margin-top:50px;
+}
 
-
+body > div > div > form > div {
 	
-
+}
+	
+.addFilmContainer{
+	
+}
 
